Fixed expand collapse

--- a/web/components/FormObject/_form-object.scss
+++ b/web/components/FormObject/_form-object.scss
@@ -10,9 +10,11 @@
   }
   &__item-wrap {
     display: flex;
+    margin-left: 20px;
   }
   &__actions {
     display: flex;
+    margin-left: 20px;
   }
   .sq-form__field {
     margin-bottom: 8px;
